--- a/app/assets/stylesheets/search.css
+++ b/app/assets/stylesheets/search.css
@@ -14,13 +14,11 @@
 }
 
 .search-page .latest-articles li {
-    height: 75px;
     list-style: none;
     border-bottom: #CCCCCC solid 1px;
 }
 
-.search-page .latest-articles li span {
-    height: 60px;
+.search-page .latest-articles li div {
     vertical-align: top;
     font-family: "Chapaza";
     font-size: 1.2em;
